@@ -84,9 +84,6 @@ CreateSymmetricElasticFunctional( const int metric, UniformVolume::SmartPtr& ref
   switch ( fltVolume->GetData()->GetDataClass() ) 
     {
     case DATACLASS_UNKNOWN :
-    case DATACLASS_BINARY :
-      // not a lot we can do here.
-      return NULL;
     case DATACLASS_GREY :
       switch ( metric ) 
 	{
