@@ -57,9 +57,6 @@ VoxelMatchingAffineFunctional
   switch ( fltVolume->GetData()->GetDataClass() ) 
     {
     case DATACLASS_UNKNOWN :
-    case DATACLASS_BINARY :
-      // not a lot we can do here.
-      return NULL;
     case DATACLASS_GREY :
       switch ( metric ) 
 	{
